# Lightweight

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitattributes  .gitignore  .vimspector.json  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  _api_8hpp_source.html  _basic_string_binder_8hpp_source.html  _belongs_to_8hpp_source.html  _data_binder_2_core_8hpp_source.html  _data_mapper_8hpp_source.html  _delete_8hpp_source.html  _detail_8hpp_source.html  _error_8hpp_source.html  _field_8hpp_source.html  _has_many_8hpp_source.html  _has_many_through_8hpp_source.html  _has_one_through_8hpp_source.html  _insert_8hpp_source.html  _lightweight_2_utils_8hpp_source.html  _m_f_c_string_like_8hpp_source.html  _migrate_8hpp_source.html  _migration_plan_8hpp_source.html  _primitives_8hpp_source.html  _record_8hpp_source.html  _record_id_8hpp_source.html  _select_8hpp_source.html  _sql_column_type_definitions_8hpp_source.html  _sql_connect_info_8hpp_source.html  _sql_connection_8hpp_source.html  _sql_data_binder_8hpp_source.html  _sql_date_8hpp_source.html  _sql_date_time_8hpp_source.html  _sql_error_8hpp_source.html  _sql_fixed_string_8hpp_source.html  (+182 more)
.github/: labeler.yml  prepare-test-run.sh
.github/workflows/: build.yml  docs.yml  labeler.yml
d0/d08/: tables_8hpp_source.html
d0/d24/: classSqlMigrationQueryBuilder-members.html
d0/d55/: SqlDataBinder_8hpp_source.html
d0/d78/: classSqlQueryBuilder.html  classSqlQueryBuilder.js
d0/d8e/: structSqlConnectionString.html
d0/d93/: Update_8hpp_source.html
d0/dd1/: SqlRealName_8hpp_source.html
d0/dda/: classHasMany-members.html
d0/df8/: structSqlVariant.html
d1/d05/: conceptSqlQueryObject.html
d1/d26/: SqlNumeric_8hpp_source.html
d1/d29/: structSqlConnectionString-members.html
d1/d91/: classSqlSelectQueryBuilder.html  classSqlSelectQueryBuilder.js
d1/d93/: Error_8hpp_source.html
d1/de4/: Api_8hpp_source.html  structSqlQualifiedTableColumnName.html
d1/dee/: structField-members.html
d1/dfb/: SqlFixedString_8hpp_source.html  classHasOneThrough-members.html
d2/d10/: md__2home_2runner_2work_2Lightweight_2Lightweight_2docs_2best-practices.html
d2/d51/: Select_8hpp_source.html
d2/d5e/: Primitives_8hpp_source.html
d2/d62/: structSqlGuid.html
d2/db3/: MFCStringLike_8hpp_source.html
d2/db8/: conceptDataMapperRecord.html
d3/d09/: classHasMany.html  classHasMany.js
docs/: CMakeLists.txt  CNAME  best-practices.md  usage.md
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  concepts_0.js  concepts_1.js  enums_0.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_13.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+33 more)
src/: .clang-format  .clang-tidy  ddl2cpp.cpp  reflection-cpp
src/EzQuApi/: CMakeLists.txt  EzQuApiTests.cpp  SqlConcepts.hpp  SqlConnection.cpp  SqlConnection.hpp  SqlError.hpp  SqlStatement.hpp
src/JPSql/: .gitignore  CMakeLists.txt  CMakePresets.json  JPSql.vcxproj  Model.hpp  README.md  SqlComposedQuery.cpp  SqlComposedQuery.hpp  SqlConcepts.hpp  SqlConnectInfo.cpp  SqlConnectInfo.hpp  SqlConnection.cpp  SqlConnection.hpp  SqlDataBinder.hpp  SqlError.hpp  SqlLogger.cpp  SqlLogger.hpp  SqlModel.cpp  SqlModel.hpp  SqlQueryFormatter.cpp  SqlQueryFormatter.hpp  SqlSchema.cpp  SqlStatement.cpp  SqlStatement.hpp  SqlTraits.hpp  SqlTransaction.hpp  SqlUtils.hpp
src/JPSql/Model/: AbstractField.hpp  AbstractRecord.cpp  AbstractRecord.hpp  ColumnType.hpp  Detail.hpp  Field.hpp  Logger.cpp  Logger.hpp  ModelId.hpp  README.md  Record.cpp  Record.hpp  RecordId.hpp  Relation.hpp  StringLiteral.hpp  Utils.hpp
src/JPSql/Model/Associations/: BelongsTo.hpp  HasMany.hpp  HasManyThrough.hpp  HasOne.hpp  HasOneThrough.hpp
src/Lightweight/: .editorconfig  Api.hpp  CMakeLists.txt  JPSql.vcxproj  JPSql.vcxproj.filters  SqlColumnTypeDefinitions.hpp  SqlComposedQuery.cpp  SqlComposedQuery.hpp  SqlConnectInfo.cpp  SqlConnectInfo.hpp  SqlConnection.cpp  SqlConnection.hpp  SqlDataBinder.hpp  SqlError.cpp  SqlError.hpp  SqlLogger.cpp  SqlLogger.hpp  SqlMigration.cpp  SqlMigration.hpp  SqlQuery.cpp  SqlQuery.hpp  SqlQueryFormatter.cpp  SqlQueryFormatter.hpp  SqlSchema.cpp  SqlSchema.hpp  SqlScopedTraceLogger.hpp  SqlStatement.cpp  SqlStatement.hpp  SqlTraits.hpp  SqlTransaction.cpp  SqlTransaction.hpp  SqlUtils.hpp  Utils.hpp
src/Lightweight/DataBinder/: BasicStringBinder.hpp  Core.hpp  MFCStringLike.hpp  OutputStringBinder.hpp  Primitives.hpp  SqlDate.hpp  SqlDateTime.hpp  SqlFixedString.hpp  SqlGuid.cpp  SqlGuid.hpp  SqlNullValue.hpp  SqlNumeric.hpp  SqlText.hpp  SqlTime.hpp  SqlTrimmedString.hpp  SqlVariant.cpp  SqlVariant.hpp  StdOptional.hpp  StdString.hpp  StdStringView.hpp  StringLiteral.hpp  UnicodeConverter.cpp  UnicodeConverter.hpp
src/Lightweight/DataMapper/: All.hpp  BelongsTo.hpp  DataMapper.hpp  Detail.hpp  Error.hpp  Field.hpp  HasMany.hpp  HasManyThrough.hpp  HasOneThrough.hpp  Logger.cpp  Logger.hpp  Record.hpp  RecordId.hpp  SqlRealName.hpp
src/Lightweight/DataMapper/Associations/: HasMany.hpp  HasManyThrough.hpp  HasOne.hpp  HasOneThrough.hpp
src/Lightweight/Model/: AbstractField.hpp  AbstractRecord.cpp  AbstractRecord.hpp  ColumnType.hpp  Detail.hpp  Field.hpp  Logger.cpp  Logger.hpp  README.md  Record.hpp  RecordId.hpp  StringLiteral.hpp  Utils.hpp
src/Lightweight/Model/Associations/: BelongsTo.hpp  HasMany.hpp  HasManyThrough.hpp  HasOne.hpp  HasOneThrough.hpp
src/Lightweight/SqlQuery/: Core.hpp  Delete.hpp  Insert.hpp  Migrate.cpp  Migrate.hpp  MigrationPlan.cpp  MigrationPlan.hpp  Select.cpp  Select.hpp  Update.hpp
src/tests/: CMakeLists.txt  CoreTests.cpp  DataBinderTests.cpp  DataMapperTests.cpp  LightweightTests.cpp  MigrationTests.cpp  ModelAssociationsTests.cpp  ModelTests.cpp  QueryBuilderTests.cpp  UnicodeConverterTests.cpp  Utils.hpp
(+148 files in other folders)
